<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">
        <TextView
            android:id="@+id/serverIP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/ipadd"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/serverIP"
            android:layout_below="@id/serverIP"
            android:text="@string/port"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/room1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/port"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/room1"
            android:textSize="30sp" />

        <Switch
            android:id="@+id/light1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/room1"
            android:layout_marginBottom="15dp"
            android:text="@string/light1"

            android:textColor="@color/colorRed"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/fan1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/light1"
            android:layout_marginBottom="15dp"
            android:text="@string/fan1"
            android:textColor="@color/colorRed"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/fan2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fan1"
            android:text="@string/fan2"
            android:textColor="@color/colorRed"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/serverStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fan1"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:text="@string/serverDown"
            android:textColor="@color/colorRed"
            android:textSize="20sp"
            android:textStyle="italic" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_below="@id/serverStatus"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            android:indeterminate="true" />

    </RelativeLayout>
</ScrollView>